--- a/src/app/emergencycallgroups/emergencycallgroups.component.html
+++ b/src/app/emergencycallgroups/emergencycallgroups.component.html
@@ -1,5 +1,5 @@
 <div id="page-toshow">
-    <h1 class="page-title text-center">קבוצות</h1>
+    <h1 class="page-title text-center">אזעקת עובדים בחירום</h1>
     <div class="container-fluid">
         <div class="row">
             <div class="col">
