--- a/src/app/emailmanagement/emailmanagement.component.html
+++ b/src/app/emailmanagement/emailmanagement.component.html
@@ -101,7 +101,7 @@
                             <label>תאור האירוע</label>
                         </div>
                         <mat-form-field class="example-full-width">
-                            <input type="text" matInput formControlName="ContentToShow">
+                            <textarea type="text" matInput cols="2" formControlName="ContentToShow"></textarea>
                         </mat-form-field>
                     </li>
                     <li class="border-me col-6">
@@ -251,7 +251,7 @@
                                     <label>תאור האירוע</label>
                                 </div>
                                 <mat-form-field class="example-full-width">
-                                    <input type="text" matInput formControlName="ContentToShow">
+                                    <textarea type="text" matInput formControlName="ContentToShow"></textarea>
                                 </mat-form-field>
                             </li>
                         </div>
